# CDAWG-LZ78

./: CMakeLists.txt  README.md  download_files.sh  main.cpp  prepare_files.sh  run.sh  run_benchmark_all.sh  run_benchmark_compression.sh  run_benchmark_compression_cdawg.sh  run_benchmark_compression_suffixtree.sh  run_benchmark_construction.sh
includes/: biasedsearchtree.hpp  bwt_index.hpp  compression_measure.hpp  compute_lz_length.hpp  dawg.hpp  lz78.hpp  map.hpp  markedancestor.hpp  sdsl_suffixtree.hpp  suffix_array.hpp  utils.hpp  vector.hpp  waveletmatrix.hpp
python/: generate_fib.py  visualization.ipynb  visualize_compress_result.ipynb  visualize_construction_result.ipynb
